--- a/doc/3D.md
+++ b/doc/3D.md
@@ -125,7 +125,9 @@
 
 13.gl.polygonOffset(factor, units)
 
-    指定加到每个顶点绘制后的Z值上的偏移量，偏移量按照公式“m*factor+r*units”计算，其中m表示顶点所在表面相对于观察者的视线的角度，而r表示硬件能够区分两个z值之差的最小值。
+    指定加到每个顶点绘制后的Z值上的偏移量，偏移量按照公式“m*factor+r*units”计算，
+    其中m表示顶点所在表面相对于观察者的视线的角度，
+    而r表示硬件能够区分两个z值之差的最小值。
 
 14. 通过顶点索引绘制物体 gl.drawElements(mode, count, type, offset)
 
